# mb_touch

./: README.md  db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
templates/: base.html
templates/products/: product_list.html
